[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/hud/TaskList/TaskList.gd" type="Script" id=1]
[ext_resource path="res://packed/hud/TaskList/TaskCard.tscn" type="PackedScene" id=2]

[node name="TaskList" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "Displays Task List

 Manages Task list state
 number of tasks in queque
	add task
	remove task
	complete task
"
}

[node name="TaskCard" parent="." instance=ExtResource( 2 )]
[connection signal="remove_card" from="TaskCard" to="." method="_on_TaskCard_remove_card"]
